--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
-
-html {
-  font-size: 62.5%; }
-
 header {
   width: 100%;
   display: flex;
@@ -15,17 +7,21 @@ header {
   padding: 10px;
   text-decoration: none;
   list-style: none;
-  padding-bottom: 5px; }
-  header nav {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    padding-right: 10px; }
-    header nav ul {
-      display: flex;
-      list-style-type: none; }
-      header nav ul li a {
-        text-decoration: none; }
+  padding-bottom: 5px;
+}
+header nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-right: 10px;
+}
+header nav ul {
+  display: flex;
+  list-style-type: none;
+}
+header nav ul li a {
+  text-decoration: none;
+}
 
 .navbar {
   display: flex;
@@ -37,68 +33,77 @@ header {
   gap: 20px;
   text-align: center;
   align-items: center;
-  list-style-type: none; }
-  .navbar li a {
-    text-decoration: none;
-    color: #390029; }
-    .navbar li a:hover {
-      color: purple; }
+  list-style-type: none;
+}
+.navbar li a {
+  text-decoration: none;
+  color: #390029;
+}
+.navbar li a:hover {
+  color: purple;
+}
 
 main .section-1 div img {
-  width: 100%; }
+  width: 100%;
+}
 
 .section-2 div img {
-  height: 350px; }
+  height: 350px;
+}
 
 footer {
   text-align: center;
   color: white;
   background-color: black;
   height: 900%;
-  width: 100%; }
-  footer .facebook {
-    position: fixed;
-    bottom: 10px;
-    right: 90px; }
-  footer .instagram {
-    position: fixed;
-    bottom: 10px;
-    right: 50px; }
-  footer .whatsapp {
-    position: fixed;
-    bottom: 10px;
-    right: 10px; }
+  width: 100%;
+}
+footer .facebook {
+  position: fixed;
+  bottom: 10px;
+  right: 90px;
+}
+
+.instagram {
+  position: fixed;
+  bottom: 10px;
+  right: 50px;
+}
+
+.whatsapp {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
 
 @media (max-width: 1024px) {
   header {
-    justify-content: space-around; }
+    justify-content: space-around;
+  }
   .galeria {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: "img1 img2 img3 img4"; } }
+    grid-template-areas: "img1 img2 img3 img4";
+  }
+}
 
 @media (max-width: 768px) {
   header {
     flex-direction: column;
     align-items: center;
-    padding-top: 10px; }
+    padding-top: 10px;
+  }
   .galeria {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: "img1 img2 img3"; }
+    grid-template-areas: "img1 img2 img3";
+  }
   .navbar {
-    justify-content: center; } }
+    justify-content: center;
+  }
+}
 
 @media (max-width: 425px) {
   .galeria {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "img1 img2"; } }
-
-.navbar {
-  justify-content: center;
-  font-family: "Inter", sans-serif;
-  font-size: 25px;
-  display: flex;
-  list-style: none;
-  text-decoration: none;
-  gap: 20px;
-  text-align: center;
-  align-items: center; }
+    grid-template-areas: "img1 img2";
+  }
+}
